PRO-68: done magic
